# NGHVG_162

src/boca/: CMakeLists.txt
src/boca/src/: boca_node.cpp
src/cerebro/src/: cerebro_node.cpp
src/comunicacao_llm/src/: llm_ia_node.cpp
src/localizacao/: CMakeLists.txt
src/localizacao/src/: localizacao_node.cpp
src/mapeamento/: CMakeLists.txt
src/mapeamento/src/: mapeamento_node.cpp
src/memoria/src/: memoria_node.cpp
src/olhos/src/: olhos_node.cpp
src/ouvido/: CMakeLists.txt  package.xml  setup.py
src/ouvido/ouvido/: ouvido_node.py
src/ouvido/src/: ouvido_node.cpp
src/pernas/: CMakeLists.txt  package.xml
src/pernas/src/: pernas_node.cpp
